--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no" />
-    <title>Your presentation</title>
+    <title>@yegrb: Iterative Chef</title>
     <link rel="stylesheet" type="text/css" href="vendor/css/base.css" media="all"/>
     <link rel="stylesheet" type="text/css" href="vendor/css/shAll.css" media="all"/>
     <script type="text/javascript" charset="utf-8" src="vendor/lib/jquery-1.4.4.min.js"></script>
