--- a/slides/welcome.html
+++ b/slides/welcome.html
@@ -1,4 +1,3 @@
-<h1 class="centered">Welcome to your preso!</h1>
-<p class="centered">
-  This is a default slide.
-</p>
+<h1 class="centered">Iterative Chef</h1>
+<p class="centered">@yegrb - April 2011</p>
+<q>Now, where did I put those chicken wings?</q>
