--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no" />
     <title>@yegrb: Iterative Chef</title>
+    <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="vendor/css/base.css" media="all"/>
     <link rel="stylesheet" type="text/css" href="vendor/css/shAll.css" media="all"/>
     <script type="text/javascript" charset="utf-8" src="vendor/lib/jquery-1.4.4.min.js"></script>
