--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="vendor/css/base.css" media="all"/>
     <link rel="stylesheet" type="text/css" href="vendor/css/shAll.css" media="all"/>
+    <link rel="stylesheet" type="text/css" href="vendor/css/pygments/default.css" media="all"/>
     <script type="text/javascript" charset="utf-8" src="vendor/lib/jquery-1.4.4.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="vendor/lib/deps.js"></script>
     <script type="text/javascript" charset="utf-8" src="vendor/lib/shining.js"></script>
