--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no" />
     <title>@yegrb: Iterative Chef</title>
     <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="vendor/css/base.css" media="all"/>
     <link rel="stylesheet" type="text/css" href="vendor/css/shAll.css" media="all"/>
     <link rel="stylesheet" type="text/css" href="vendor/css/pygments/default.css" media="all"/>
