Refactored updates starting.

--- a/slides/welcome.html
+++ b/slides/welcome.html
@@ -1,3 +1,5 @@
+<img src="vendor/images/OC_Chef_Logo_small.png"/>
 <h1 class="centered">Iterative Chef</h1>
-<p class="centered">@yegrb - April 2011</p>
-<q>Now, where did I put those chicken wings?</q>
+<h2><a href="http://yegrb.com">@yegrb</a> Talk, April 2011</h2>
+<p>Fletcher Nichol</p>
+
