Wow, that's a lot of slides...

--- a/slides/chef-first-recipe.html
+++ b/slides/chef-first-recipe.html
@@ -1,6 +1,8 @@
 <h1>Your first Chef recipe...</h1>
 <h2 class="centered">Ta da!</h2>
 
+<p>Pop it in <code>/lab/cookbooks/sandbox/recipes/motd.rb</code></p>
+
 <pre class="codehilite">
 <span class="n">file</span> <span class="s2">&quot;/etc/motd.tail&quot;</span> <span class="k">do</span>
   <span class="n">owner</span>   <span class="s2">&quot;root&quot;</span>
