--- a/slides/package-recipe.html
+++ b/slides/package-recipe.html
@@ -4,3 +4,7 @@
 <pre class="codehilite">
 <span class="n">package</span> <span class="s2">&quot;nginx&quot;</span>
 </pre>
+
+<br/><br/><!-- shoot me for doing this, just short on time. -->
+<p>Lovingly crafted (and actually over-documented, <a href="http://fnichol.github.com/iterative_chef/iterations/initial-draft/cookbooks/sandbox/recipes/nginx_package.html">really</a>) in <code>/lab/cookbooks/sandbox/recipes/nginx_package.rb</code></p>
+
