--- a/slides/refactored-attributes.html
+++ b/slides/refactored-attributes.html
@@ -1,5 +1,7 @@
 <h1>Refactored: Attributes</h1>
 
+<p>Dropped in at <code>/lab/cookbooks/nginx/attributes/source.rb</code> ...</p>
+
 <pre class="codehilite">
 <span class="n">default</span><span class="o">[</span><span class="ss">:nginx</span><span class="o">][</span><span class="ss">:version</span><span class="o">]</span>      <span class="o">=</span> <span class="s2">&quot;0.9.7&quot;</span>
 <span class="n">default</span><span class="o">[</span><span class="ss">:nginx</span><span class="o">][</span><span class="ss">:install_path</span><span class="o">]</span> <span class="o">=</span> <span class="s2">&quot;/opt/nginx-</span><span class="si">#{</span><span class="n">nginx</span><span class="o">[</span><span class="ss">:version</span><span class="o">]</span><span class="si">}</span><span class="s2">&quot;</span>
