--- a/slides/rundown.html
+++ b/slides/rundown.html
@@ -1,4 +1,9 @@
 <h1 class="centered">The Rundown</h1>
 <ul>
-  <li></li>
+  <li>The Problem</li>
+  <li>The Process</li>
+  <li>The Manual Way</li>
+  <li>Shell Scripting</li>
+  <li>Initial Chef Draft</li>
+  <li>Refactored Chef Cookbook</li>
 </ul>
