--- a/slides/script-variables.html
+++ b/slides/script-variables.html
@@ -1,5 +1,7 @@
 <h1>Script: Variables</h1>
 
+<p>A long, long time ago, in a file called <code>/lab/install_nginx.sh</code> ...</p>
+
 <pre class="codehilite">
 <span class="nv">cache_dir</span><span class="o">=</span><span class="s2">&quot;/var/cache/downloads&quot;</span>
 
